--- a/po/fi.po
+++ b/po/fi.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-11-18 00:43+0000\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2010-11-17 23:03+0200\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -74,11 +74,14 @@ msgstr "Tiedosto ei sisällä soitettavia virtoja."
 msgid "This file is invalid and cannot be played."
 msgstr "Tiedosto on virheellinen eikä sitä voida esittää."
 
-msgid "This file is incomplete and cannot be played."
-msgstr "Tiedosto on vajaa eikä sitä voida esittää."
-
 msgid "This file is corrupt and cannot be played."
 msgstr "Tiedosto on vioittunut eikä sitä voida näyttää."
+
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
+msgstr "Tiedosto on vajaa eikä sitä voida esittää."
 
 msgid "The video in this file might not play correctly."
 msgstr "Tiedostossa olevaa videota ei ehkä voida näyttää oikein."
@@ -626,6 +629,17 @@ msgstr ""
 
 #, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Sisääntuloa %d ei voitu asettaa laitteelle %s."
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Laitteen ”%s” tämänhetkistä sisääntuloa ei voitu lukea, se ei ehkä ole "
+"radiolaite"
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Sisääntuloa %d ei voitu asettaa laitteelle %s."
 
 #, c-format
