--- a/po/sl.po
+++ b/po/sl.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-11-01 17:27+0000\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2010-10-25 12:23+0100\n"
 "Last-Translator: Matej Urbančič <matej.urban@gmail.com>\n"
 "Language-Team: Slovenian <translation-team-sl@lists.sourceforge.net>\n"
@@ -75,11 +75,14 @@ msgstr "Datoteka ne vsebuje pretokov za predvajanje."
 msgid "This file is invalid and cannot be played."
 msgstr "Datoteka je napačna, zato je ni mogoče predvajati."
 
-msgid "This file is incomplete and cannot be played."
-msgstr "Datoteka ni popolna, zato je ni mogoče predvajati."
-
 msgid "This file is corrupt and cannot be played."
 msgstr "Datoteka je pokvarjena, zato je ni mogoče predvajati."
+
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
+msgstr "Datoteka ni popolna, zato je ni mogoče predvajati."
 
 msgid "The video in this file might not play correctly."
 msgstr "Video zapis v tej datoteki morda ne bo predvajan pravilno."
@@ -629,6 +632,17 @@ msgstr ""
 
 #, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Napaka med določanjem vhoda %d naprave %s."
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Napaka med pridobivanjem vhodnega signala naprave '%s'. Morda je radijska "
+"naprava."
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Napaka med določanjem vhoda %d naprave %s."
 
 #, c-format
