--- a/po/eu.po
+++ b/po/eu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.18.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2010-03-25 12:37+0100\n"
 "Last-Translator: Mikel Olasagasti Uranga <hey_neken@mundurat.net>\n"
 "Language-Team: Basque <translation-team-eu@lists.sourceforge.net>\n"
@@ -74,11 +74,14 @@ msgstr "Fitxategi horretan ez dago erreproduzi daitekeen korronterik."
 msgid "This file is invalid and cannot be played."
 msgstr "Fitxategi hau ez da baliozkoa eta ezin da erreproduzitu."
 
-msgid "This file is incomplete and cannot be played."
-msgstr "Fitxategi hau osatu gabea dago, eta ezin da erreproduzitu."
-
 msgid "This file is corrupt and cannot be played."
 msgstr "Fitxategi hau hondatua dago, eta ezin da erreproduzitu."
+
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
+msgstr "Fitxategi hau osatu gabea dago, eta ezin da erreproduzitu."
 
 msgid "The video in this file might not play correctly."
 msgstr ""
@@ -632,6 +635,17 @@ msgstr ""
 
 #, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Huts egin du '%2$s' gailuko %1$d. sarrera ezartzean."
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Huts egin du '%s' gailuko uneko sarrera eskuratzean. Litekeena da irrati-"
+"gailu bat izatea."
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Huts egin du '%2$s' gailuko %1$d. sarrera ezartzean."
 
 #, c-format
