--- a/po/lv.po
+++ b/po/lv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2010-07-07 11:53+0100\n"
 "Last-Translator: Rihards Priedītis <rprieditis@gmail.com>\n"
 "Language-Team: Latvian <translation-team-lv@lists.sourceforge.net>\n"
@@ -72,11 +72,14 @@ msgstr "Šis fails nesatur nevienu atskaņojamu straumi."
 msgid "This file is invalid and cannot be played."
 msgstr "Šis fails ir nederīgs un nevar tikt atskaņots."
 
-msgid "This file is incomplete and cannot be played."
-msgstr "Šis pails ir nepabeigts un nevar tikt atskaņots."
-
 msgid "This file is corrupt and cannot be played."
 msgstr "Šis fails ir bojāts un nevar tikt atskaņots."
+
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
+msgstr "Šis pails ir nepabeigts un nevar tikt atskaņots."
 
 msgid "The video in this file might not play correctly."
 msgstr "Video šajā failā var tikt atskaņots nepareizi."
@@ -624,6 +627,17 @@ msgstr ""
 
 #, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Neizdevās uzstādīt ievadi %d uz ierīces %s."
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Neizdevās saņemt pašreizējo ievadi no ierīces \"%s\". Iespējams tā ir radio "
+"ierīce"
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Neizdevās uzstādīt ievadi %d uz ierīces %s."
 
 #, c-format
