--- a/po/sk.po
+++ b/po/sk.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-11-18 00:43+0000\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2010-11-08 15:48+0100\n"
 "Last-Translator: Peter Tuhársky <tuharsky@misbb.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
@@ -69,11 +69,14 @@ msgstr "Tento súbor neobsahuje žiadne prehrateľné prúdy údajov."
 msgid "This file is invalid and cannot be played."
 msgstr "Tento súbor je chybný a nedá sa prehrať."
 
-msgid "This file is incomplete and cannot be played."
-msgstr "Tento súbor je neúplný a nedá sa prehrať."
-
 msgid "This file is corrupt and cannot be played."
 msgstr "Tento súbor je poškodený a nedá sa prehrať."
+
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
+msgstr "Tento súbor je neúplný a nedá sa prehrať."
 
 msgid "The video in this file might not play correctly."
 msgstr "Video v tomto súbore možno nebude hrať korektne."
@@ -624,6 +627,16 @@ msgstr ""
 
 #, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Nepodarilo sa nastaviť vstup %d na zariadení %s."
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Nepodarilo sa zistiť súčasný vstup na zariadení '%s'. Možno je to rádio."
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Nepodarilo sa nastaviť vstup %d na zariadení %s."
 
 #, c-format
