--- a/po/sr.po
+++ b/po/sr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
+"POT-Creation-Date: 2011-01-07 01:15+0000\n"
 "PO-Revision-Date: 2004-03-13 00:18+0100\n"
 "Last-Translator: Danilo Segan <dsegan@gmx.net>\n"
 "Language-Team: Serbian <gnu@prevod.org>\n"
@@ -71,10 +71,13 @@ msgstr ""
 msgid "This file is invalid and cannot be played."
 msgstr ""
 
-msgid "This file is incomplete and cannot be played."
+msgid "This file is corrupt and cannot be played."
 msgstr ""
 
-msgid "This file is corrupt and cannot be played."
+msgid "Invalid atom size."
+msgstr ""
+
+msgid "This file is incomplete and cannot be played."
 msgstr ""
 
 msgid "The video in this file might not play correctly."
@@ -625,6 +628,15 @@ msgstr ""
 
 #, fuzzy, c-format
 msgid "Failed to set input %d on device %s."
+msgstr "Не могу да отворим радио уређај '%s'"
+
+#, fuzzy, c-format
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr "Не могу да примим довољно бафера са уређаја „%s“."
+
+#, fuzzy, c-format
+msgid "Failed to set output %d on device %s."
 msgstr "Не могу да отворим радио уређај '%s'"
 
 #, fuzzy, c-format
